refactor(接口测试): Swagger 导入优化